---------------------------------------------------------------------------------------------------
Version: 1.5.8
Date: 23/01/26
---------------------------------------------------------------------------------------------------
Version: 1.5.7
Date: 23/1/26
  Bugfixes:
    - Hotfix for incorrectly migrated data from 1.5.5 -> 1.5.6.
        *This 1.5.7 version will force-recalculate all item buffs, restoring game balance in either 1.5.5 or 1.5.6 saves.*
---------------------------------------------------------------------------------------------------
Version: 1.5.6
Date: 23/1/26
  Balancing:
    - Rebalanced item buffs giving multipliers to strongbox loot value.
    - Rebalanced item buffs giving build distance.
    - Reduced the amount of time that magmatic flames burn on the ground (the fire created from magmatic bullets).
    - Remove some of the visual FX of magmatic bullets, improving performance if used in concentrated areas.
  Bugfixes:
    - Fixed that some quests based on finding trades were not giving their full amount of free hex claims reward.
---------------------------------------------------------------------------------------------------
Version: 1.5.5
Date: 22/1/26
  Bugfixes:
    - Hotfix for game crashing when loading a pre-1.5.3 save and then trying to find more dungeons.
---------------------------------------------------------------------------------------------------
Version: 1.5.4
Date: 22/1/26
  Bugfixes:
    - Hotfix for game sometimes crashing when an entity dies.
---------------------------------------------------------------------------------------------------
Version: 1.5.3
Date: 22/1/26
  Features:
    - Added 5 new quests: "Cracking the Vault", "Lockbreaker", "Automated Clearing", "Trades in Circuitry", "Vulcanus 101".
    - Added Hexadic Resonators (six different power levels) to dungeon chests.