@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.8
-Date: 23/01/26
+Date: 25/1/26
+  Bugfixes:
+    - Fixed that save migration up to version 1.5.6 was removing trade productivity bonuses from quests.
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.7
 Date: 23/1/26
